content/boomerang-flow/2.1.0/architecture/03.frameworks.md
---
title: Framework Architecture
index: 3
---

# Framework Architecture

Flow mainly focuses on providing no to low code pre built tasks. However if you want to build your own you can use the our CLI framework which comes with a number of pre-built functions.

These frameworks are node modules to enable worker developers to use a pre built CLI and Common Core functions to be able to easily drop in and run any command.

These frameworks can be found [here on IBM's GitHub](https://github.ibm.com/Boomerang-Workers/boomerang.worker.base)

## Worker CLI

The Worker CLI provides two pieces of functionality:

1. A node module providing an execution and wrapper that once imported all you need to is drop a file or script into specific folders to be imported and available
2. A node package executable (npx) to initialize new worker repositories. This will prompt users with questions and build out everything they need.

| Summary              |                          |
| :------------------- | :----------------------- |
| Type                 | Custom                   |
| Platform Owner       | Tyson Lawrie and Tim Bula |
| Platform Version     | 0.4.0                    |
| Languages            | Node.js                  |
| Dependent Middleware | None                     |
| Implementation       | Node Module (npm) and Node Executable (npx) |

**What's Next**

None at this time. Looking for enhancement and change requests.

**Considerations**

N/A

## Worker Core

A node package that provides common helper methods

- common: methods that can be used by task developers to enhance and speed the ease of their development
- log: logging utilities using chalk to output nice values in the log for the user
- utils: utility functions to help plugin authors retrieve, resolve, and set task output properties.

| Summary              |                          |
| :------------------- | :----------------------- |
| Type                 | Custom                   |
| Platform Owner       | Tyson Lawrie and Tim Bula |
| Platform Version     | 0.3.0                    |
| Languages            | Node.js                  |
| Dependent Middleware | None                     |
| Implementation       | Node Module (npm)        |

**What's Next**

- Enhance the available common methods by harvesting current worker tasks.

**Considerations**

N/A