content/boomerang-flow/3.3.0/architecture/03.frameworks.md
---
title: Framework Architecture
index: 3
---

# Framework architecture

Flow mainly focuses on providing no-to-low code prebuilt tasks. However, if you want to build your own, you can choose one of various flavours:
 - use our Boomerang Worker Interfaces framework, which comes with a number of prebuilt functions,
 - take one of the prebuilt Tekton<sup>®</sup> Catalog Task and use it as is,
 - define and build your own Task based on any Docker image.


## Boomerang Worker Interfaces
These frameworks are node modules that enable worker developers to use a prebuilt CLI and Common Core functions to easily drop in and run any command.

These frameworks can be found [here on Boomerangs GitHub](https://github.com/boomerang-io/worker.interfaces).

## Worker CLI

The Worker CLI provides two pieces of functionality:

1. A node module providing an execution and wrapper - Once imported, all you need to do is drop a file or script into specific folders to be imported and available.
2. A node package executable (npx) to initialize new worker repositories - This prompts users with questions that build out everything they need.

| Summary              |                          |
| :------------------- | :----------------------- |
| Type                 | Custom                   |
| Platform Owner       | Tyson Lawrie, Tim Bula, and Benjamin Ruby |
| Platform Version     | 0.8.5                   |
| Languages            | Node.js                  |
| Dependent Middleware | None                     |
| Implementation       | Node Module (npm) and Node Executable (npx) |

**What's next**

Nothing at this time. Looking for enhancement and change requests.

**Considerations**

N/A

## Worker Core

Worker Core is a node package that provides common helper methods. They are:

- `common` - Methods that can be used by task developers to enhance and speed the ease of their development
- `log` - Logging utilities that use Chalk to output nice values in the log for the user
- `utils` - Utility functions to help plugin authors retrieve, resolve, and set task parameters

| Summary              |                          |
| :------------------- | :----------------------- |
| Type                 | Custom                   |
| Platform Owner       | Tyson Lawrie, Tim Bula, and Benjamin Ruby |
| Platform Version     | 1.3.5                    |
| Languages            | Node.js                  |
| Dependent Middleware | None                     |
| Implementation       | Node Module (npm)        |

**What's next**

- Enhance the available common methods by harvesting current worker tasks.

**Considerations**

N/A

## Prebuilt Tekton<sup>®</sup> Catalog Tasks
To allow a higher productivity in designing and building your workflows, you can now use the Tekton<sup>®</sup> Catalog Tasks found [here on GitHub](https://github.com/tektoncd/catalog).

Create a new Boomerang Task using the definition of Tekton<sup>®</sup> Catalog Tasks, through the new `yaml` view section. You can even extend the newly created Boomerang Tasks though the UI's **Definition Fields** and **Result Parameters** sections.

**Considerations**

- The platform currently support Tekton<sup>®</sup> Tasks that define a single step inside their specification.


## Custom built Tasks
We are not bound to any programming language to create your own custom Boomerang Tasks as long as you can run your code as a Docker<sup>®</sup> container.

As an example, we've created the platform's Box<sup>®</sup> Boomerang Tasks based on Java Spring Boot technology, found [here on GitHub](https://github.com/boomerang-io/worker.box).

**Considerations**

- In order for the custom Boomerang Tasks to be able to pass the result parameters down to the following tasks in the workflow, the Docker container needs to follow the Tekton<sup>®</sup> task results design.
